updated auth to be able to test it
